[WFCORE-4000][WFCORE-4001] Automagically propagating necessary modular JDK options.